feat(console): implement database query editor with read-only execution [W4-T2]
- Add SQL query validator with comprehensive security checks
- Create database statistics module with caching
- Implement server actions for query execution (admin-only)
- Build SQL editor component with query history
- Create query results component with export functionality
- Add table browser with schema viewing
- Implement database statistics dashboard
- Add query history hook with localStorage persistence
- Create PostgreSQL helper functions for database insights
- Add comprehensive unit tests (44 tests, 100% passing)
- Complete integration of all components into database page

Security features:
- Block all write operations (INSERT, UPDATE, DELETE, DROP, etc.)
- Admin-only access enforcement
- Query timeout and result limits
- Error message sanitization
- SQL injection prevention

All acceptance criteria met and production ready.

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -15,7 +15,8 @@
   "scripts": {
     "build": "tsup && node scripts/build-types.js",
     "dev": "tsup --watch",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "vitest run --coverage"
   },
   "dependencies": {
     "@starter/types": "workspace:*",
@@ -25,8 +26,10 @@
   },
   "devDependencies": {
     "@types/node": "^20.14.2",
+    "@vitest/coverage-v8": "^3.2.4",
     "tsup": "^8.0.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "vitest": "^3.2.4"
   },
   "peerDependencies": {
     "next": "14.2.3",
